syntax = "proto3";

package auth;
option go_package = "github.com/jalexanderII/zero_fintech/gen/Go/auth";

service Auth {
  // Authentication
  rpc Login(LoginRequest) returns (AuthResponse);
  rpc SignUp(SignupRequest) returns (AuthResponse);
}

message LoginRequest {
  string Username = 1;
  string Password = 2;
}

message AuthResponse {
  string User_id = 1;
  string Token = 2;
}

message SignupRequest {
  string Username = 1;
  string Email = 2;
  string Password = 3;
  string phone_number = 4;
}